fix dark mode

--- a/themes/cactus/assets/scss/_extend.scss
+++ b/themes/cactus/assets/scss/_extend.scss
@@ -25,7 +25,7 @@ h2,
   font-size: 1rem;
 }
 h3 {
-  color: $color-accent-2;
+  //color: $color-accent-2;
   text-decoration: underline;
   font-weight: bold;
   font-size: 1.0rem;
